Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Operating System: ReactOS
Platform: x86 Hardware
Description
Documents accessed recently don't appear in "Recent documents", when you move the mouse over it, it gets greyed out.
See also CORE-1207 from it:
The function SHAddToRecentDocs() located in shell32/shellord.c should resolve shell shortcuts to avoid inserting paths more than once.
Attachments
Issue Links
- blocks
-
CORE-5620 shell/explorer issues
-
- Closed
-
- is duplicated by
-
CORE-4558 Recent Documents works in English only
-
- Resolved
-
-
CORE-13796 Empty "Documents" submenu in the Start menu
-
- Resolved
-